# SMACT

./: .ci-trigger  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .smact_data.py.swp  .travis.yml  .zenodo.json  Band_gap_simple.py  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Ef_Mulliken.py  Eigenvalues.csv  Example_build_compound_library.py  Example_distort.py  LICENSE  MANIFEST.in  Makefile  README.distorter  README.md  VECexample.py  ValenceMax.py  build_compound_library.py  build_library_bangaps.py  compound_electroneg.py  compound_electroneg_pauling.py  doper2.py  dopertest2.py  elements_valence_modified.csv  example_output.txt  get_species_occurences_df2.ipynb  intermetallics_classification.ipynb  new_intermetallics_classification.ipynb  new_intermetallics_mod_usage_example.py  output.txt  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  (+11 more)
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: check-live-links.yml  ci.yml  codeql.yml  combine-prs.yml  publish-to-pypi.yml  pyright.yml  test.yml  update-changelog.yml
Examples/: build_compound_library.py  cation_mutation.py
OldFiles/: build_compound_library.py  smact_core.py
OldFiles/disorder/: smact_distorter.py
OldFiles/test/: Example_distort.py  KNbO3.py  smact_builder.py
data/: Covalent_radii.csv  Eigenvalues.csv  oxidationstates.data  solid_properties.xlsx
dev_docs/: contribution_guidelines.md
dev_docs/design_docs/: StructurePredictor.md
dev_scripts/: filter_changelog.py
docs/: CHANGELOG.md  CONTRIBUTING.md  Doxyfile  Makefile  conf.py  examples.rst  getting_started.rst  index.rst  intermetallics_readme.md  introduction.rst  make.bat  metallicity_readme.md  requirements.in  requirements.txt  smact.builder.rst  smact.data.rst  smact.data_loader.rst  smact.distorter.rst  smact.dopant_prediction.doper.rst  smact.dopant_prediction.rst  smact.lattice.rst  smact.lattice_parameters.rst  smact.metallicity.rst  smact.oxidation_states.rst  smact.parameters.rst  smact.properties.rst  smact.property_prediction.base_predictor.rst  smact.property_prediction.config.rst  smact.property_prediction.convenience.rst  smact.property_prediction.io.rst  smact.property_prediction.registry.rst  smact.property_prediction.roost.rst  smact.property_prediction.rst  smact.rst  smact.screening.rst  smact.structure_prediction.database.rst  smact.structure_prediction.mutation.rst  smact.structure_prediction.prediction.rst  smact.structure_prediction.probability_models.rst  smact.structure_prediction.rst  (+11 more)
docs/examples/: compound_electroneg.ipynb  distorter.ipynb  doper.ipynb  elements_and_species.ipynb  filter.ipynb  lists.ipynb  metallicity.ipynb  oxidation_states.ipynb  property_prediction.ipynb  valence_electron_count.ipynb  validity.ipynb
docs/html/: ____init_____8py.html  _band__gap__full_8py.html  _band__gap__simple_8py.html  annotated.html  builder_8py.html  classes.html  classsmact_1_1core_1_1_element-members.html  classsmact_1_1core_1_1_element.html  classsmact_1_1core_1_1_species-members.html  classsmact_1_1core_1_1_species.html  classsmact_1_1lattice_1_1_lattice-members.html  classsmact_1_1lattice_1_1_lattice.html  classsmact_1_1lattice_1_1_site-members.html  classsmact_1_1lattice_1_1_site.html  compound__electroneg_8py.html  compound__electroneg__pauling_8py.html  core_8py.html  data_8py.html  dir_5a0b446bb0d2980cd31491a4d96d6d97.html  dir_e1fd6dcc7612afbd72b24f2d07e89290.html  distorter_8py.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  lattice_8py.html  lattice__parameters_8py.html  mainpage_8py.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespacesmact.html  namespacesmact_1_1builder.html  namespacesmact_1_1core.html  namespacesmact_1_1data.html  namespacesmact_1_1distorter.html  namespacesmact_1_1lattice.html  (+12 more)
docs/latex/: ____init_____8py.tex  _band__gap__full_8py.tex  _band__gap__simple_8py.tex  annotated.tex  builder_8py.tex  classsmact_1_1core_1_1_element.eps  classsmact_1_1core_1_1_element.tex  classsmact_1_1core_1_1_species.eps  classsmact_1_1core_1_1_species.tex  classsmact_1_1lattice_1_1_lattice.eps  classsmact_1_1lattice_1_1_lattice.tex  classsmact_1_1lattice_1_1_site.eps  classsmact_1_1lattice_1_1_site.tex  compound__electroneg_8py.tex  compound__electroneg__pauling_8py.tex  core_8py.tex  data_8py.tex  dir_5a0b446bb0d2980cd31491a4d96d6d97.tex  dir_e1fd6dcc7612afbd72b24f2d07e89290.tex  distorter_8py.tex  files.tex  hierarchy.tex  lattice_8py.tex  lattice__parameters_8py.tex  (+21 more)
examples/: ElementCombinationsParallel.py  README.md  all_charge_neutral.py  band_gap_simple.py  build_compound_library.py  build_library_bandgaps.py  cation_mutation.py  compound_electroneg.py  crystal_space.ipynb  crystal_space_visualisation.ipynb  distorter.ipynb  doper.ipynb  filter.ipynb  headline_numbers.py  mixed_ions_on_MP-v2.py  oxidation_states.ipynb  validity.ipynb  vec_example.py
figures/: drawing.ipynb
joss/: paper.bib  paper.md
permutations/: README
pretrained_models/: README.md
properties/: Band_gap_full.py  Band_gap_simple.py  compound_electroneg_pauling.py
read_oxidation/: smact_lattice.py
requirements/: requirements-py310.txt
smact/: .coveragerc  Makefile  __init__.py  builder.py  core.py  data.py  data_loader.py  distorter.py  element_embeddings.py  informatics.py  informatics_master.py  intermetallics.py  lattice.py  lattice_parameters.py  mainpage.py  make.bat  metallicity.py  oxidation_states.py  oxidationstates.py  oxidationstates_extra.py  parameters.py  perovskites.py  properties.py  screening.py  smact_data.py  smact_surface.py  surface.py  test.db  wurtzite.py
test/: Example_build_compound_library.py  output.txt  smact_lattice.py
tests/: Example_distort.py  Example_surfaces.py  ValenceMaxTest.py  test.py
tutorials/: SmactValidityofGNoME.ipynb  SolarOxides.ipynb  crystal_space_visualisation.ipynb  oxidation_states.ipynb  smact_generation_of_solar_oxides.ipynb  smact_validity_of_GNoMe.ipynb
utils/: bandgap.py
(+10479 files in other folders)
